--- a/jee/pom.xml
+++ b/jee/pom.xml
@@ -2,10 +2,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.exemplo</groupId>
-    <artifactId>api-simples</artifactId>
+    <artifactId>jee</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
-    <name>api-simples</name>
+    <name>jee</name>
     <dependencies>
         <!-- JAX-RS -->
         <dependency>
