--- a/jee/src/main/webapp/WEB-INF/web.xml
+++ b/jee/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
          http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <display-name>api-simples</display-name>
+    <display-name>jee</display-name>
         <!-- Configurações de Contexto de Parâmetros, Listeners, etc., se necessário -->
     <!-- Exemplo de Listener -->
     <!--
